infrastructure/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bden-prod
---
apiVersion: v1
kind: Namespace
metadata:
  name: bden-monitoring
